enrich endpoint
